--- a/css/login.css
+++ b/css/login.css
@@ -204,6 +204,11 @@ span.psw {float: right;
 
 @media only screen and (max-width: 768px)
 {
+    
+.content {display: flex;
+          justify-content: center;
+          padding: 0em 0%;}    
+    
 #nav_menu {display: none;}
     
 #mobile_menu {display: block;}
