--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ footer a {text-decoration: none;
            height: 80%;
            padding-top: 15px;}
 
-h1 {font-family: "Bebas Neue", sans-serif;
+main h1 {font-family: "Bebas Neue", sans-serif;
     text-align: center;
     font-size: 100px;
     font-weight: 800;
